--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-arrow==1.1.1
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+greenlet==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
-jinja2-time==0.2.0
-make==0.1.6.post2
 MarkupSafe==2.0.1
-python-dateutil==2.8.2
-six==1.16.0
+redis==3.5.3
+SQLAlchemy==1.4.23
 Werkzeug==2.0.1
+WTForms==2.3.3
